--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "tutorial-youtube",
+  "name": "webproject",
   "version": "1.0.0",
-  "description": "Building a login system with NodeJS",
+  "description": "Web Project",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --exec babel-node src/server.js"
   },
-  "author": "hary pham",
+  "author": "cesar ogdai",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
