--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "express-session": "^1.17.1",
     "express-validator": "^6.5.0",
     "hbs": "^4.2.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.1.0",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "selenium-webdriver": "^4.15.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
