--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "hbs": "^4.2.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.1.0",
+    "nodemailer": "^6.9.7",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "selenium-webdriver": "^4.15.0"
