--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "selenium-webdriver": "^4.15.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.6",
+    "@babel/node": "^7.22.19",
+    "@babel/preset-env": "^7.23.6",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "nodemon": "^2.0.3"
